<resources>
    <string name="app_name" translatable="false">WHR</string>
    <string name="facebook_app_id" translatable="false">1670347293014852</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1670347293014852</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_cashless_hospital" translatable="false">CashlessHospital</string>
    <string name="title_activity_new_login" translatable="false">Sign in</string>
    <string name="address_found" translatable="false">Address found</string>
    <string name="no_address_found" translatable="false">Sorry, no address found</string>
    <string name="no_location_data_provided" translatable="false">No location data provided</string>
    <string name="service_not_available" translatable="false">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used" translatable="false">Invalid latitude or longitude used</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="generic_server_down" translatable="false">Please Try Again After Some Time</string>
    <string name="generic_error" translatable="false">Please Try Again After Some Time</string>
    <string name="generic_server_timeout" translatable="false">Please Try Again After Some Time</string>
    <string name="auth_failed" translatable="false">Please Try Again After Some Time</string>
    <string name="no_internet">Connection Error</string>
    <string name="no_network_connection" translatable="false">No Network Connection</string>
    <string name="parsing_failed" translatable="false">Please Try Again After Some Time</string>
    <string name="label_cancel" translatable="false">Cancel</string>
    <string name="label_ok" translatable="false">OK</string>
    <string name="notification_image_saved" translatable="false">Image saved</string>
    <string name="notification_image_saved_click_to_preview" translatable="false">Image saved. Click to preview.</string>
    <string name="menu_download">Download</string>
    <string name="format_crop_result_d_d" translatable="false">Crop Result (%1$dx%2$d)</string>
    <string name="permission_title_rationale" translatable="false">Permission needed</string>
    <string name="permission_write_storage_rationale" translatable="false">Storage write permission is needed to save the image.</string>
    <string name="toast_unexpected_error" translatable="false">Unexpected error</string>
    <string name="file_provider_authorities" translatable="false">com.yalantis.ucrop.provider</string>
    <string name="das_emergancy" translatable="false">Emergency</string>
    <string name="das_chektoservice" translatable="false">Click To get Emergency Service</string>
    <string name="das_fristadd" translatable="false">First Aid</string>
    <string name="das_poburning" translatable="false">Poisoning,Burning</string>
    <string name="das_doctor" translatable="false">Doctor</string>
    <string name="das_hospital" translatable="false">Hospital</string>
    <string name="das_Diagnostic" translatable="false">Diagnostic</string>
    <string name="das_Chemist" translatable="false">Chemist</string>
    <string name="das_Blood_Bank" translatable="false">Blood Bank</string>
    <string name="das_Instruments" translatable="false">OTC Products</string>
    <string name="das_alternative" translatable="false">Alternative</string>
    <string name="das_treatment" translatable="false">Treatment</string>
    <string name="das_best" translatable="false">Best</string>
    <string name="das_offers">Offers</string>
    <string name="das_health" translatable="false">Health</string>
    <string name="das_insurance" translatable="false">Insurance</string>
    <string name="nav_myaccount" translatable="false">My Account</string>
    <string name="nav_Appointment" translatable="false">Appointments</string>
    <string name="nav_Reports" translatable="false">Reports</string>
    <string name="nav_TreatmentSuggested" translatable="false">Treatment Suggested</string>
    <string name="nav_ReferredDoctor" translatable="false">Referred  Doctor</string>
    <string name="nav_PayBill" translatable="false">Pay Bill</string>
    <string name="nav_Wallet" translatable="false">Wallet</string>
    <string name="nav_Favourites" translatable="false">Favourites</string>
    <string name="nav_Family" translatable="false">Family</string>
    <string name="nav_EmergencyContacts" translatable="false">Emergency Contacts</string>
    <string name="nav_share_earn" translatable="false">Share &amp; Earn</string>
    <string name="nav_rate_app" translatable="false">Rate Mobile App</string>
    <string name="nav_Lifestyle" translatable="false">Lifestyle</string>
    <string name="nav_aboutus" translatable="false">About Us</string>
    <string name="nav_help" translatable="false">Help</string>
    <string name="nav_singout" translatable="false">Sign Out</string>
    <string name="title_activity_show_doctor_list_from_treatment_charge_list_for_package" translatable="false">
        ShowDoctorListFromTreatmentChargeListForPackage
    </string>
    <string name="title_activity_navigation_for_user" translatable="false">NavigationForUser</string>
    <string-array name="category">
        <item>Please Select category</item>
        <item>Doctor</item>
        
        <item>Pathology</item>
    </string-array>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="title_activity_sms" translatable="false">SmsActivity</string>
    <string name="action_logout" translatable="false">Logout</string>
    <string name="msg_enter_mobile" translatable="false">Enter your mobile number to get started!</string>
    <string name="lbl_name" translatable="false">Name</string>
    <string name="lbl_email" translatable="false">Email</string>
    <string name="lbl_mobile" translatable="false">Mobile</string>
    <string name="lbl_next" translatable="false">NEXT</string>
    <string name="msg_sit_back" translatable="false">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp" translatable="false">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp" translatable="false">Enter OTP</string>
    <string name="lbl_submit" translatable="false">SUBMIT</string>
    <string name="whr" translatable="false">WHR</string>
    <string name="welcome">Welcome To WHR</string>
    <string name="changeLanguage">Select Language</string>
    <string name="userId">User Id</string>
    <string name="password">Password</string>
    <string name="keepMeLogin">Keep Me Logged In</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="loginFacebook">LogIn With Facebook</string>
    <string name="loginGoogle">Login With Google</string>
    <string name="register">Register</string>
    <string name="ForgoPassword">Forgot Password</string>
    <string name="EnterRegisteredMobileNumber">Enter Registered Mobile Number</string>
    <string name="YouwillgetOTP">You will get OTP by SMS to reset password</string>
    <string name="Submit">Submit</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="EnterNewPassword">Enter New Password</string>
    <string name="EnterPasswordAgain">Enter Password Again</string>
    <string name="PasswordChanged">Password Changed</string>
    <string name="LoginwithnewPassword">Login with new Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="indicatesmandatoryfields">indicates mandatory fields</string>
    <string name="FullName">Full Name</string>
    <string name="DateOBirth">Date Of Birth(dd/mm/yyyy)</string>
    <string name="MobileNumber">Mobile Number : </string>
    <string name="EnterEmailId">Enter Email Id</string>
    <string name="SocialNumbe">Social Number</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Other">Other</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="OfferCode">Offer Code (If Available)</string>
    <string name="IAgreeTermsandConditions">I Agree Terms and Conditions</string>
    <string name="MobileVerification">Mobile Verification</string>
    <string name="EnterOTP">Enter OTP</string>
    <string name="Confirm">Confirm</string>
    <string name="EnterOTPsentbySMS">Enter OTP sent by SMS on \nyour Registered mobile number</string>
    <string name="SuccessfullyRegistered">Successfully Registered</string>
    <string name="UserName">User Name:</string>
    <string name="OK">Ok</string>
    <string name="location">Location</string>
    <string name="notification">Notification</string>
    <string name="filter">Filter</string>
    <string name="searchby">Search by Name/Test/Treatment</string>
    <string name="whrId">Whr Id:</string>
    <string name="emergency">Emergency</string>
    <string name="emergencyone">Click To get Emergency Service</string>
    <string name="firstId">First Aid</string>
    <string name="schemes">Apply Government Schemes / NGO</string>
    <string name="firstIdone">Poisoning,Burning</string>
    <string name="appoinment">Book An Appoinment</string>
    <string name="doctor">Doctor</string>
    <string name="hospital">Hospital</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="chemist">Chemist</string>
    <string name="alternative">Alternative Treatment</string>
    <string name="bestOffers">Best Offers</string>
    <string name="insurance">Health Insurance</string>
    <string name="upcoming">Upcoming</string>
    <string name="English">English</string>
    <string name="Marathi">Marathi</string>
    <string name="ChangeLanuage">Change Language</string>
    <string name="MyAccount">My Account</string>
    <string name="Appointments">Appointments</string>
    <string name="Reports">Reports</string>
    <string name="TreatmentSuggested">Treatment Suggested</string>
    <string name="ReferredDoctor">Referred  Doctor</string>
    <string name="PayBill">Pay Bill</string>
    <string name="Wallet">Wallet</string>
    <string name="Favourites">Favourites</string>
    <string name="Family">Family</string>
    <string name="EmergencyContacts">Emergency Contacts</string>
    <string name="Lifestyle">Lifestyle</string>
    <string name="ShareAndEarn">Share &amp; Earn</string>
    <string name="RateMobileApp">Rate Mobile App</string>
    <string name="AboutUs">About Us</string>
    <string name="Help">Help</string>
    <string name="SignOut">Sign Out</string>
    <string name="Description">Description</string>
    <string name="Pay">Pay</string>
    <string name="AdvanceBooking">Advance Booking</string>
    <string name="HospitalName">Hospital Name</string>
    <string name="AdvancePayment">Advance Payment</string>
    <string name="TermsAndCondition">Terms And Condition</string>
    <string name="Delete">Delete</string>
    <string name="DoyoureallywanttodeletethisEmergencyMemberContact">Do you really want to delete this Emergency Member Contact?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="settings">Settings</string>
    <string name="invite_friends_and_family">Invite Friends and Family</string>
    <string name="qty">QTY</string>
    <string name="selectLocation">Your Location Not Found\n For Selecting Your Location Click Here </string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
</resources>