<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="4dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_2sdp">

            <com.whr.user.com.WHR.ViewPackage.OpenSans_Bold
                android:id="@+id/medicineBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:padding="@dimen/_5sdp"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <com.whr.user.com.WHR.ViewPackage.OpenSansRegular
                android:id="@+id/qty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/qty"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.whr.user.com.WHR.ViewPackage.OpenSansRegular
                android:id="@+id/Morning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="@string/morning"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <com.whr.user.com.WHR.ViewPackage.OpenSansRegular
                android:id="@+id/Afternoon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="@string/afternoon"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <com.whr.user.com.WHR.ViewPackage.OpenSansRegular
                android:id="@+id/Night"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:text="@string/night"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>