<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_4sdp">

        <com.whr.user.com.WHR.ViewPackage.OpenSans_Bold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/AdvanceBooking"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/_16sdp" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_close_white"
            app:civ_border_color="@color/red"
            app:civ_border_width="@dimen/_1sdp" />


    </RelativeLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/topPanel"
        android:background="@color/divider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_below="@+id/view"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:visibility="gone">


                <com.whr.user.com.WHR.ViewPackage.OpenSans_Bold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Hospital Id" />

                <com.whr.user.com.WHR.ViewPackage.OpenSansRegular
                    android:id="@+id/txtAdvanceId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Sesss" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">


                <com.whr.user.com.WHR.ViewPackage.OpenSans_Bold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/HospitalName" />

                <com.whr.user.com.WHR.ViewPackage.OpenSansRegular
                    android:id="@+id/txtAdvanceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">


                <com.whr.user.com.WHR.ViewPackage.OpenSans_Bold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/AdvancePayment" />

                <com.whr.user.com.WHR.ViewPackage.OpenSansRegular
                    android:id="@+id/txtAdancePayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">


                <com.whr.user.com.WHR.ViewPackage.OpenSans_Bold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Description" />

                <com.whr.user.com.WHR.ViewPackage.OpenSansRegular
                    android:id="@+id/txtAdvanceDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">


                <com.whr.user.com.WHR.ViewPackage.OpenSans_Bold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TermsAndCondition" />

                <com.whr.user.com.WHR.ViewPackage.OpenSansRegular
                    android:id="@+id/txtAdvanceTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical">


        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/black"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/btnYes"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/primary"
                android:fontFamily="OpenSans-Regular.ttf"
                android:text="@string/Pay"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="@dimen/_14sdp" />
        </com.balysv.materialripple.MaterialRippleLayout>


    </LinearLayout>


</RelativeLayout>





























