<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_4sdp">

        <com.whr.user.com.WHR.ViewPackage.OpenSans_Bold
            android:id="@+id/alterboxtitleBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/location"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/fotgetclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_close_white" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/primary_dark" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.whr.user.com.WHR.ViewPackage.OpenSansSemiBold
                android:id="@+id/newpastextshowtext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/selectLocation"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/primary"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/forgotsubmit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_32sdp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_corner_primary_button"
                android:fontFamily="OpenSans-Regular.ttf"
                android:text="@string/OK"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />
        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</LinearLayout>