<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal">

            <com.whr.user.com.WHR.ViewPackage.OpenSans_Bold
                android:id="@+id/alterboxtitleBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/Delete"
                android:textColor="@color/primary"
                android:textSize="@dimen/_16sdp" />

            <ImageView
                android:id="@+id/closeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_close_white" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary_dark" />

        <com.whr.user.com.WHR.ViewPackage.OpenSansRegular
            android:id="@+id/Relationtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_7sdp"
            android:text="@string/DoyoureallywanttodeletethisEmergencyMemberContact"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="@color/primary"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/yesBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@drawable/round_corner_primary_button"
                        android:fontFamily="OpenSans-Regular.ttf"
                        android:text="@string/Yes"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/_14sdp" />
                </com.balysv.materialripple.MaterialRippleLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="@color/primary"
                    app:mrl_rippleDelayClick="false"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/noBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@drawable/round_corner_primary_button"
                        android:fontFamily="OpenSans-Regular.ttf"
                        android:text="@string/No"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/_14sdp" />
                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>